<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Gifty_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_gifty_logo"
        tools:layout_height="230dp"
        tools:paddingTop="20dp" />

    <LinearLayout
        android:id="@+id/Box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/layout_emailbox"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/layout_emailbox"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_signinbtn"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3.5dp"
                android:text="@string/sign_in" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>