<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".EditProfileActivity">


    <LinearLayout
        android:id="@+id/top_bar_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_default"
        android:background="@color/colorTopBar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_profile"
            android:textSize="@dimen/top_bar_text_size"
            android:layout_marginStart="100dp"
            android:layout_gravity="center" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/editing_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/top_bar_action"
        android:layout_marginTop="50dp">


            <TextView
                android:id="@+id/text_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/layout_emailboxwhite"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/text_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/layout_emailboxwhite"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/layout_emailboxwhite"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/text_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_birthday"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/layout_emailboxwhite"
                android:ems="10"
                android:inputType="text" />


            <FrameLayout
                android:layout_width="@dimen/btn_save_width"
                android:layout_height="@dimen/btn_save_height"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:layout_marginEnd="45dp"
                android:background="@drawable/layout_signinbtn">

                <Button
                    android:id="@+id/button_edit_save_changes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_save"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_gravity="center"
                    android:background="@drawable/layout_signinbtn"
                    android:gravity="end" />

            </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="@id/editing_fields"
        app:itemIconTint="@drawable/bottom_nav_colors"
        app:itemTextColor="@drawable/bottom_nav_colors"
        app:menu="@menu/bottom_navigation" />


</android.support.constraint.ConstraintLayout>