<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCreateaccount2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/hello_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvCreateaccount2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:text="@string/choose_a_profile_picture_to_make_it_easier_for_your_family_and_friends_to_find_you"
        android:textSize="20sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCreateaccount2_1"
            android:layout_width="217dp"
            android:layout_height="210dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.147"
            app:srcCompat="@drawable/ic_user" />

        <ImageButton
            android:id="@+id/btnCreateaccount2_1"
            android:layout_width="47dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/ivCreateaccount2_1"
            app:layout_constraintTop_toTopOf="@+id/ivCreateaccount2_1"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <Button
            android:id="@+id/btnCreateaccount2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorWhite"
            android:text="@string/skip"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCreateaccount2_3"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCreateaccount2_1" />

        <Button
            android:id="@+id/btnCreateaccount2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_signinbtn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/done"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCreateaccount2_1" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>