<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWishlistActivity">

    <LinearLayout
        android:id="@+id/top_bar_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_default"
        android:background="@color/colorTopBar"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_top_bar_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/text_top_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_create_wishlist"
            android:textSize="@dimen/top_bar_text_size"
            android:layout_marginStart="80dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editing_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/top_bar_action"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/text_wishlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_wishlist_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_wishlist_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/layout_emailboxwhite"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/layout_wishlist_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_wishlist_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_wishlist_deadline"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_wishlist_deadline"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/layout_emailboxwhite"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="@dimen/btn_save_width"
            android:layout_height="@dimen/btn_save_height"
            app:layout_constraintTop_toBottomOf="@id/layout_wishlist_deadline"
            android:layout_gravity="end"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/layout_signinbtn">

            <Button
                android:id="@+id/button_create_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_create"
                android:textAlignment="center"
                android:textSize="@dimen/btn_text_size"
                android:gravity="center|end"
                android:background="@drawable/layout_signinbtn" />

        </FrameLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>